--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,9 +7,9 @@ jobs:
       postgres:
         image: postgres:14.1
         env:
-          - POSTGRES_DB=postgres
-          - POSTGRES_USER=postgres
-          - POSTGRES_PASSWORD=postgres
+          - POSTGRES_DB: postgres
+          - POSTGRES_USER: postgres
+          - POSTGRES_PASSWORD: postgres
         ports:
           - 5432:5432
     runs-on: ubuntu-latest
