Actions ci.yml update Unit tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,5 +22,7 @@ jobs:
           python-version: 3
       - name: Install Requirements.txt
         run: pip install -r requirements.txt
+      - name: Run unit tests1
+          run: python -m pytest --import-mode=append tests/
       - name: Run Tests
         run: pytest
