--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,9 @@ jobs:
         with:
           python-version: 3
       - name: Install Requirements.txt
-        run: pip install -r requirements.txt
+        run: |
+            pip install -r requirements.txt
+            pip install -e .
       - name: Run unit tests1
           run: python -m pytest --import-mode=append tests/
       - name: Run Tests
