--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,9 +13,8 @@ jobs:
         ports:
           - 5432:5432
     runs-on: ubuntu-latest
-    env: |
-      DJANGO_SETTINGS_MODULE: config.settings
-      DJANGO_SETTINGS_MODULE: test.settings pytest
+    env:
+      DJANGO_SETTINGS_MODULE: config.settings pytest.ini
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
