--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,10 @@ jobs:
           python-version: 3
       - name: Install Requirements.txt
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install pytest-django
+      - name: Run migrations
+        run: python manage.py migrate
       - name: Run Tests
-        run: pytest
+        run: py.test
