--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pytest-django
       - name: Run migrations
         run: python manage.py migrate
       - name: Run Tests
-        run: py.test
+        run: python manage.py test
