--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,4 +27,6 @@ jobs:
       - name: Run migrations
         run: python manage.py migrate
       - name: Run Tests
-        run: python manage.py test
+        run: |
+          pip install pytest
+          pytest
